--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
           More Research
         </a>
         <div class="navbar-dropdown">
-          <a class="navbar-item" href="https://Qiyao-Wang/ipeval/">
+          <a class="navbar-item" href="https://Qiyao-Wang.github.io/ipeval/">
             IPEval
           </a>
-          <a class="navbar-item" href="https://Qiyao-Wang/AutoPatent/">
+          <a class="navbar-item" href="https://Qiyao-Wang.github.io/AutoPatent/">
             AutoPatent
           </a>
         </div>
@@ -85,7 +85,7 @@
             <span class="author-block">
               <a href="https://Qiyao-Wang.github.io">Qiyao Wang</a><sup>1,2*</sup>,</span>
             <span class="author-block">
-              Shiwen Ni<sup>1*</sup>,</span>
+              <a href="https://shiwen-ni.top/">Shiwen Ni</a><sup>1*</sup>,</span>
           </div>
 
           <div class="is-size-5 publication-authors">
