--- a/index.html
+++ b/index.html
@@ -99,10 +99,7 @@
           </div>
 
           <div class="is-size-5 publication-authors">
-            *Equal Contribution 
-          </div>
-           <div class="is-size-5 publication-authors">
-            †Corresponding Author 
+            *Equal Contribution, †Corresponding Author 
           </div>
           
           <div class="column has-text-centered">
