--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
               </span> -->
               <!-- Code Link. -->
               <span class="link-block">
-                <a href="https://github.com/QiYao-Wang/AutoPatent"
+                <a href="https://github.com/QiYao-Wang.github.io/AutoPatent"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fab fa-github"></i>
@@ -145,7 +145,7 @@
               </span>
               <!-- Dataset Link. -->
               <span class="link-block">
-                <a href="https://huggingface.co/datasets/QiYao-Wang/IPEval"
+                <a href=""
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="far fa-images"></i>
@@ -255,7 +255,7 @@
 <footer class="footer">
   <div class="container">
     <div class="content has-text-centered">
-      <a class="icon-link" href="https://github.com/Qiyao-Wang" class="external-link" disabled>
+      <a class="icon-link" href="https://github.com/Qiyao-Wang.github.io" class="external-link" disabled>
         <i class="fab fa-github"></i>
       </a>
     </div>
