--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
               </span> -->
               <!-- Code Link. -->
               <span class="link-block">
-                <a href="https://github.com/QiYao-Wang.github.io/AutoPatent"
+                <a href="https://github.com/QiYao-Wang/AutoPatent"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fab fa-github"></i>
