--- a/index.html
+++ b/index.html
@@ -86,6 +86,16 @@
               <a href="https://Qiyao-Wang.github.io">Qiyao Wang</a><sup>1,2*</sup>,</span>
             <span class="author-block">
               <a href="https://shiwen-ni.top/">Shiwen Ni</a><sup>1*</sup>,</span>
+            <span class="author-block">
+              <a>Huaren Liu</a><sup>2</sup>,</span>
+            <span class="author-block">
+              <a>Guhong Chen</a><sup>1,3</sup>,</span>
+            <span class="author-block">
+              <a>Shule Lu</a><sup>2</sup>,</span>
+            <span class="author-block">
+              <a>Yuan Lin</a><sup>2†</sup>,</span>
+            <span class="author-block">
+               <a>Min Yang</a><sup>1†</sup></span>
           </div>
 
           <div class="is-size-5 publication-authors">
