--- a/index.html
+++ b/index.html
@@ -87,15 +87,15 @@
             <span class="author-block">
               <a href="https://shiwen-ni.top/">Shiwen Ni</a><sup>1*</sup>,</span>
             <span class="author-block">
-              <a>Huaren Liu</a><sup>2</sup>,</span>
+              Huaren Liu<sup>2</sup>,</span>
             <span class="author-block">
-              <a>Guhong Chen</a><sup>1,3</sup>,</span>
+              Guhong Chen<sup>1,3</sup>,</span>
             <span class="author-block">
-              <a>Shule Lu</a><sup>2</sup>,</span>
+              Shule Lu<sup>2</sup>,</span>
             <span class="author-block">
-              <a>Yuan Lin</a><sup>2†</sup>,</span>
+              Yuan Lin<sup>2†</sup>,</span>
             <span class="author-block">
-               <a>Min Yang</a><sup>1†</sup></span>
+               <a href="minyang.me">Min Yang</a><sup>1†</sup></span>
           </div>
 
           <div class="is-size-5 publication-authors">
