--- a/index.html
+++ b/index.html
@@ -89,15 +89,21 @@
             <span class="author-block">
               Huaren Liu<sup>2</sup>,</span>
             <span class="author-block">
-              Guhong Chen<sup>1,3</sup>,</span>
-            <span class="author-block">
               Shule Lu<sup>2</sup>,</span>
             <span class="author-block">
+              Guhong Chen<sup>1,3</sup>,</span>
+          </div>
+           <div class="is-size-5 publication-authors">
+             <span class="author-block">
+              Xi Feng<sup>1</sup>,</span>
+             <span class="author-block">
+              Chi Wei<sup>1</sup>,</span>
+           <span class="author-block">
               Yuan Lin<sup>2†</sup>,</span>
             <span class="author-block">
                <a href="minyang.me">Min Yang</a><sup>1†</sup></span>
           </div>
-
+          
           <div class="is-size-5 publication-authors">
             *Equal Contribution, †Corresponding Author 
           </div>
