--- a/index.html
+++ b/index.html
@@ -98,6 +98,8 @@
               Xi Feng<sup>1</sup>,</span>
              <span class="author-block">
               Chi Wei<sup>1</sup>,</span>
+             <span class="author-block">
+              Qiang Qu<sup>1</sup>,</span>
            <span class="author-block">
               Yuan Lin<sup>2†</sup>,</span>
             <span class="author-block">
@@ -109,7 +111,7 @@
           </div>
 
           <div class="is-size-5 publication-authors">
-            <div class="author-block"><sup>1</sup>Shenzhen Institute of Advanced Technology, Chinese Academy of Sciences</div>
+            <div class="author-block"><sup>1</sup>Shenzhen Key Laboratory for High Performance Data Mining, Shenzhen Institute of Advanced Technology, Chinese Academy of Sciences</div>
           </div> 
           <div class="is-size-5 publication-authors">
             <div class="author-block"><sup>2</sup>Dalian University of Technology</div>
