--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
            <span class="author-block">
               Yuan Lin<sup>2†</sup>,</span>
             <span class="author-block">
-               <a href="minyang.me">Min Yang</a><sup>1†</sup></span>
+               <a href="minyang.me">Min Yang</a><sup>1,4†</sup></span>
           </div>
           
           <div class="is-size-5 publication-authors">
@@ -118,6 +118,9 @@
           </div>
           <div class="is-size-5 publication-authors">
             <div class="author-block"><sup>3</sup>Southern University of Science and Technology</div>
+          </div>
+          <div class="is-size-5 publication-authors">
+            <div class="author-block"><sup>4</sup>Shenzhen University of Advanced Technology</div>
           </div>
           
           <div class="column has-text-centered">
