--- a/index.html
+++ b/index.html
@@ -100,6 +100,8 @@
               Chi Wei<sup>1</sup>,</span>
              <span class="author-block">
               Qiang Qu<sup>1</sup>,</span>
+             <span class="author-block">
+              Hamid Alinejad-Rokny<sup>5</sup>,</span>
            <span class="author-block">
               Yuan Lin<sup>2†</sup>,</span>
             <span class="author-block">
@@ -121,6 +123,9 @@
           </div>
           <div class="is-size-5 publication-authors">
             <div class="author-block"><sup>4</sup>Shenzhen University of Advanced Technology</div>
+          </div>
+          <div class="is-size-5 publication-authors">
+            <div class="author-block"><sup>5</sup>The University of New South Wales</div>
           </div>
           
           <div class="column has-text-centered">
