--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="keywords" content="Large Language Models, Intellectual Property, Benchmark">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>AutoPatent</title>
+  <title>AutoPatent: A Multi-Agent Framework for Automatic Patent Generation</title>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-PYVRSFMDRL"></script>
@@ -80,7 +80,7 @@
     <div class="container is-max-desktop">
       <div class="columns is-centered">
         <div class="column has-text-centered">
-          <h1 class="title is-1 publication-title">AutoPatent</h1>
+          <h1 class="title is-1 publication-title">AutoPatent:A Multi-Agent Framework for Automatic Patent Generation</h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
               <a href="https://Qiyao-Wang.github.io">Qiyao Wang</a><sup>1,2*</sup>,</span>
