--- a/index.html
+++ b/index.html
@@ -80,7 +80,8 @@
     <div class="container is-max-desktop">
       <div class="columns is-centered">
         <div class="column has-text-centered">
-          <h1 class="title is-1 publication-title">AutoPatent:A Multi-Agent Framework for Automatic Patent Generation</h1>
+          <h3 align="center"><img style="margin:auto;" src='./static/images/logo.png' width=300px></h3>
+          <h1 class="title is-1 publication-title">AutoPatent: A Multi-Agent Framework for Automatic Patent Generation</h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
               <a href="https://Qiyao-Wang.github.io">Qiyao Wang</a><sup>1,2*</sup>,</span>
