--- a/index.html
+++ b/index.html
@@ -274,7 +274,15 @@
 <section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
-    <pre><code>paper coming soon...</code></pre>
+    <pre><code>@article{wang2024autopatentmultiagentframeworkautomatic,
+      title={AutoPatent: A Multi-Agent Framework for Automatic Patent Generation}, 
+      author={Qiyao Wang and Shiwen Ni and Huaren Liu and Shule Lu and Guhong Chen and Xi Feng and Chi Wei and Qiang Qu and Hamid Alinejad-Rokny and Yuan Lin and Min Yang},
+      year={2024},
+      eprint={2412.09796},
+      archivePrefix={arXiv},
+      primaryClass={cs.CL},
+      url={https://arxiv.org/abs/2412.09796}, 
+}</code></pre>
   </div>
 </section>
 
