--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
            <span class="author-block">
               Yuan Lin<sup>2†</sup>,</span>
             <span class="author-block">
-               <a href="minyang.me">Min Yang</a><sup>1,4†</sup></span>
+               <a href="https://minyang.me/">Min Yang</a><sup>1,4†</sup></span>
           </div>
           
           <div class="is-size-5 publication-authors">
