--- a/index.html
+++ b/index.html
@@ -61,9 +61,12 @@
           More Research
         </a>
         <div class="navbar-dropdown">
+          <p><strong>Benchmark</strong></p>
           <a class="navbar-item" href="https://Qiyao-Wang.github.io/ipeval/">
             IPEval
           </a>
+          <hr>
+          <p><strong>Patent</strong></p>
           <a class="navbar-item" href="https://Qiyao-Wang.github.io/AutoPatent/">
             AutoPatent
           </a>
