--- a/index.html
+++ b/index.html
@@ -57,16 +57,11 @@
       </a>
 
       <div class="navbar-item has-dropdown is-hoverable">
-        <a class="navbar-link">
-          More Research
-        </a>
-        <div class="navbar-dropdown">
-          <p><strong>Benchmark</strong></p>
+        <a><strong>Benchmark</strong></a>
           <a class="navbar-item" href="https://Qiyao-Wang.github.io/ipeval/">
             IPEval
           </a>
-          <hr>
-          <p><strong>Patent</strong></p>
+          <a><strong>Patent</strong></a>
           <a class="navbar-item" href="https://Qiyao-Wang.github.io/AutoPatent/">
             AutoPatent
           </a>
