--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
       </a>
 
       <div class="navbar-item has-dropdown is-hoverable">
-        <a style="color: black;user-select: none;"><strong>Benchmark</strong></a>
+        <a style="color: black;user-select: none;padding-left: 5px;"><strong>Benchmark</strong></a>
           <a class="navbar-item" href="https://Qiyao-Wang.github.io/ipeval/">
             IPEval
           </a>
-          <a style="color: black;user-select: none;"><strong>Patent</strong></a>
+          <a style="color: black;user-select: none;padding-left: 5px;"><strong>Patent</strong></a>
           <a class="navbar-item" href="https://Qiyao-Wang.github.io/AutoPatent/">
             AutoPatent
           </a>
