--- a/index.html
+++ b/index.html
@@ -57,7 +57,11 @@
       </a>
 
       <div class="navbar-item has-dropdown is-hoverable">
-        <a style="color: black;user-select: none;padding-left: 5px;"><strong>Benchmark</strong></a>
+        <a class="navbar-link">
+          More Research
+        </a>
+        <div class="navbar-dropdown">
+          <a style="color: black;user-select: none;padding-left: 5px;"><strong>Benchmark</strong></a>
           <a class="navbar-item" href="https://Qiyao-Wang.github.io/ipeval/">
             IPEval
           </a>
@@ -65,6 +69,7 @@
           <a class="navbar-item" href="https://Qiyao-Wang.github.io/AutoPatent/">
             AutoPatent
           </a>
+        </div>
       </div>
     </div>
 
