--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
           <h1 class="title is-1 publication-title">AutoPatent: A Multi-Agent Framework for Automatic Patent Generation</h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
-              <a href="https://Qiyao-Wang.github.io">Qiyao Wang</a><sup>1,2*</sup>,</span>
+              <a href="https://wangqiyao.me">Qiyao Wang</a><sup>1,2*</sup>,</span>
             <span class="author-block">
               <a href="https://shiwen-ni.top/">Shiwen Ni</a><sup>1*</sup>,</span>
             <span class="author-block">
