--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   </div>
   <div class="navbar-menu">
     <div class="navbar-start" style="flex-grow: 1; justify-content: center;">
-      <a class="navbar-item" href="https://Qiyao-Wang.github.io">
+      <a class="navbar-item" href="https://wangqiyao.me">
       <span class="icon">
           <i class="fas fa-home"></i>
       </span>
@@ -62,11 +62,11 @@
         </a>
         <div class="navbar-dropdown">
           <a style="color: black;user-select: none;padding-left: 5px;"><strong>Benchmark</strong></a>
-          <a class="navbar-item" href="https://Qiyao-Wang.github.io/ipeval/">
+          <a class="navbar-item" href="https://ipeval.wangqiyao.me/">
             IPEval
           </a>
           <a style="color: black;user-select: none;padding-left: 5px;"><strong>Patent</strong></a>
-          <a class="navbar-item" href="https://Qiyao-Wang.github.io/AutoPatent/">
+          <a class="navbar-item" href="https://autopatent.wangqiyao.me/">
             AutoPatent
           </a>
         </div>
